use correct namespace for table protection elements, fdo#82128

Change-Id: I5b9cb4a76739a0c91597c0470c737439d2b07e4f
Reviewed-on: https://gerrit.libreoffice.org/10943
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>